--- a/modelling.ipynb
+++ b/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "4634cdf2",
    "metadata": {
     "ExecuteTime": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "87a943ee-4623-40c9-96e5-29edf384e2ff",
    "metadata": {
     "scrolled": true
@@ -37,14 +37,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "joblib: 1.1.1\n",
-      "matplotlib :3.8.4\n",
+      "joblib: 1.2.0\n",
+      "matplotlib :3.8.0\n",
       "numpy: 1.26.4\n",
-      "pandas :2.2.2\n",
-      "plotly :2.2.2\n",
+      "pandas :2.1.4\n",
+      "plotly :2.1.4\n",
       "sklearn: 1.2.2\n",
-      "seaborn :0.11.2\n",
-      "streamlit :1.30.0\n"
+      "seaborn :0.12.2\n",
+      "streamlit :1.32.0\n"
      ]
     }
    ],
@@ -61,12 +61,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f73e2561",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.Collecting sklearn\n",
+      "  Using cached sklearn-0.0.post12.tar.gz (2.6 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'error'\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  python setup.py egg_info did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [15 lines of output]\n",
+      "  The 'sklearn' PyPI package is deprecated, use 'scikit-learn'\n",
+      "  rather than 'sklearn' for pip commands.\n",
+      "  \n",
+      "  Here is how to fix this error in the main use cases:\n",
+      "  - use 'pip install scikit-learn' rather than 'pip install sklearn'\n",
+      "  - replace 'sklearn' by 'scikit-learn' in your pip requirements files\n",
+      "    (requirements.txt, setup.py, setup.cfg, Pipfile, etc ...)\n",
+      "  - if the 'sklearn' package is used by one of your dependencies,\n",
+      "    it would be great if you take some time to track which package uses\n",
+      "    'sklearn' instead of 'scikit-learn' and report it to their issue tracker\n",
+      "  - as a last resort, set the environment variable\n",
+      "    SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True to avoid this error\n",
+      "  \n",
+      "  More information is available at\n",
+      "  https://github.com/scikit-learn/sklearn-pypi-package\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "error: metadata-generation-failed\n",
+      "\n",
+      "Encountered error while generating package metadata.\n",
+      "\n",
+      "See above for output.\n",
+      "\n",
+      "note: This is an issue with the package mentioned above, not pip.\n",
+      "hint: See above for details.\n"
+     ]
+    }
+   ],
    "source": [
-    "# !pip install joblib"
+    "pip install sklearn\n"
    ]
   },
   {
@@ -1505,9 +1555,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "das_1",
+   "display_name": "env_titanic",
    "language": "python",
-   "name": "das_1"
+   "name": "env_titanic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1519,7 +1569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "toc": {
    "base_numbering": 1,
